--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#about">about</a>
+            <a href="#gis">GIS</a>
+            <a href="#ecom">Ecom</a>
             <a href="#services">services</a>
             <a href="#impact">impact</a>
             <a href="#contact">contact</a>
@@ -91,7 +93,7 @@
         </div>
     </section>
     
-    <section class="about" id="about">
+    <section class="about" id="gis">
         <h1 class="heading">Satellite Services <span>GIS</span></h1>
 
         <div class="row row1">
@@ -136,7 +138,7 @@
         </div>
     </section>
 
-    <section class="about" id="about">
+    <section class="about" id="ecom">
         <h1 class="heading">E-commerce <span>Drone Delivery</span></h1>
 
         <div class="row row1">
@@ -180,7 +182,7 @@
     </section>
 
     <!-- MENU -->
-    <section class="menu" id="menu">
+    <section class="menu" id="services">
         <h1 class="heading">value <span>Our services</span></h1>
 
         <div class="box-container">
@@ -246,7 +248,7 @@
     </section>
 
     <!-- REVIEW -->
-    <section class="review" id="review">
+    <section class="review" id="impact">
         <h1 class="heading">Impact <span>Socio-Economic Impact</span></h1>
 
         <div class="swiper review-slider">
@@ -323,7 +325,7 @@
     </section>
 
     <!-- BOOK -->
-    <section class="book" id="book">
+    <section class="book" id="contact">
         <h1 class="heading">Contact us <span>let's get in touch</span></h1>
 
         <form action="">
